[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Create a command line interface binary with some common dependencies ((clap || docopt) and error_chain)"
documentation = "https://docs.rs/cargo-cli"
keywords = ["cargo", "cli", "command", "line"]
license = "MIT/Apache-2.0"
name = "cargo-cli"
readme = "README.md"
repository = "https://github.com/rustyhorde/cargo-cli"
version = "1.0.0"

[dependencies]
clap = "2"
curl = "0"
error-chain = "0"
mustache = "0"
serde = "1"
serde_json = "1"
serde_derive = "1"
term = "0"
toml = "0"
